--- a/sass/components/_breadcrumb.scss
+++ b/sass/components/_breadcrumb.scss
@@ -4,7 +4,7 @@
 
 .breadcrumb_area {
   background-color: $primary;
-  padding: 70px 0;
+  padding: 130px 0 70px;
 
   .title {
     @include font(40px, 900);
