--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,10 @@ h6 {
 
 p {
   line-height: 24px;
-  color: #777777;
+  color: #373a3c;
   margin: 0;
   padding: 0;
+  font-weight: 400;
 }
 
 span {
@@ -130,6 +131,15 @@ button {
   content: "";
   background-color: #2b6cac;
   box-shadow: 0px 0px 10px rgba(53, 119, 240, 0.4);
+}
+
+.form-control {
+  border: 1px solid #989898;
+}
+
+.form-control:focus {
+  border-color: unset;
+  box-shadow: unset;
 }
 
 .mt-30 {
@@ -508,7 +518,7 @@ nav {
 }
 .about_area .text .title {
   font-size: 26px;
-  font-weight: 600;
+  font-weight: 400;
   margin-top: 30px;
 }
 .about_area .text p {
@@ -542,49 +552,83 @@ nav {
   color: #ffffff;
 }
 
+.about-bg {
+  background-position: center auto !important;
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
+  height: 300px;
+}
+
+.small-image {
+  float: left;
+  margin-right: 24px;
+  margin-bottom: 20px;
+}
+
 .practice_area {
   padding-top: 80px;
+  margin-bottom: 80px;
 }
 .practice_area .bg-static {
   background-color: #333333;
   display: inline-block;
 }
-.practice_area .bg-static .area-wrapper {
+.practice_area .area-wrapper {
   margin: -20px 0;
 }
-.practice_area .bg-static .area-wrapper .image {
+.practice_area .area-wrapper .image {
   width: 100%;
   height: 330px;
   position: relative;
 }
-.practice_area .bg-static .area-wrapper .image img {
+.practice_area .area-wrapper .image img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-.practice_area .bg-static .area-wrapper .image .overly {
+.practice_area .area-wrapper .image .overly {
   position: absolute;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
   text-align: center;
-  transition: 0.4s;
-  background-color: rgba(0, 0, 0, 0.245);
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  transition: 0.5s;
+}
+.practice_area .area-wrapper .image .overly h3 {
+  margin: 6px;
+  width: 100%;
+  transition: 0.3s;
+  color: white;
   display: flex;
   align-items: center;
   justify-content: center;
+  border: 4px solid rgba(0, 0, 0, 0);
 }
-.practice_area .bg-static .area-wrapper .image .overly h3 {
-  margin: 10px;
-  width: 100%;
-  height: 100%;
-  transition: 0.3s;
-  color: white;
+.practice_area .area-wrapper .image .overly h3 span {
+  width: 251px;
+  font-family: "Roboto", sans-serif;
+  font-size: 26px;
+  font-weight: 400;
+  position: relative;
 }
-.practice_area .bg-static .area-wrapper .image .overly:hover h3 {
-  border: 5px solid rgb(68, 141, 237);
-  background-color: rgba(0, 0, 0, 0.259);
+.practice_area .area-wrapper .image .overly h3 span::before {
+  position: absolute;
+  bottom: -30px;
+  left: 50%;
+  width: 40px;
+  height: 4px;
+  background-color: #2b6cac;
+  content: "";
+  transform: translateX(-50%);
+}
+.practice_area .area-wrapper .image .overly:hover {
+  background-color: rgba(0, 0, 0, 0.7);
+}
+.practice_area .area-wrapper .image .overly:hover h3 {
+  border: 4px solid #2b6cac;
 }
 
 .practice_item {
@@ -633,6 +677,10 @@ nav {
   color: #ffffff;
 }
 
+.practice_area_page .area-wrapper .image .overly h3 span::before {
+  content: none !important;
+}
+
 .projects_area {
   padding-top: 80px;
 }
@@ -649,13 +697,27 @@ nav {
   transition: all 0.3s ease-in-out;
 }
 .projects_item .text {
-  padding: 20px 20px;
+  padding: 40px 25px;
+  position: relative;
 }
 .projects_item .text .title {
-  font-size: 20px;
-  font-weight: 700;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
   color: #292930;
   transition: all 0.3s ease-in-out;
+  text-align: center;
+}
+.projects_item .text::after {
+  content: " ";
+  display: block;
+  position: absolute;
+  left: calc(50% - 13px);
+  top: -19px;
+  width: 26px;
+  height: 38px;
+  background-size: 100%;
+  background-image: url(../../images/add.png);
 }
 .projects_item:hover .image img {
   transform: scale(1.1);
@@ -676,14 +738,43 @@ nav {
   background-color: #ffffff;
 }
 .founder_messages_area .text .title {
-  font-size: 30px;
-  font-weight: 700;
+  font-size: 32px;
+  font-weight: 500;
   margin-bottom: 5px;
 }
 .founder_messages_area .text .subtitle {
-  font-size: 26px;
-  font-weight: 700;
+  font-size: 28px;
+  font-weight: 500;
   margin-bottom: 15px;
+}
+.founder_messages_area .bg-cng {
+  background-color: transparent !important;
+  border: 2px solid rgba(51, 51, 51, 0.7);
+  color: rgba(51, 51, 51, 0.7);
+}
+.founder_messages_area .bg-cng::before {
+  background-color: transparent !important;
+}
+.founder_messages_area .bg-cng:hover {
+  border: 2px solid #2b6cac;
+  color: #ffffff;
+  background-color: #2b6cac !important;
+}
+
+.foreign_investment_area {
+  padding: 60px 0;
+  background-color: #f2f2f2;
+  background-size: cover !important;
+}
+.foreign_investment_area .image {
+  border: 1px solid #2b6cac;
+  padding: 14px;
+  background-color: #ffffff;
+}
+.foreign_investment_area .text .title {
+  font-size: 32px;
+  font-weight: 500;
+  margin-bottom: 45px;
 }
 
 .footer_area .footer-bg {
@@ -863,7 +954,7 @@ nav {
 
 .breadcrumb_area {
   background-color: #2b6cac;
-  padding: 70px 0;
+  padding: 130px 0 70px;
 }
 .breadcrumb_area .title {
   font-size: 40px;
@@ -994,10 +1085,12 @@ nav {
 .people_area .top_filter_options .search_select .select_box .select_checkboxes input {
   box-shadow: none !important;
   border-radius: 0;
-  border: 1px solid transparent;
+  border: 1px solid #ffffff;
+  background-color: #2b6cac;
 }
 .people_area .top_filter_options .search_select .select_box .select_checkboxes input:checked {
   border-color: #ffffff;
+  background-color: #2b6cac;
 }
 .people_area .top_filter_options .search_select .select_box .select_checkboxes label {
   font-size: 15px;
@@ -1056,20 +1149,22 @@ nav {
   transform: scale(1.02);
 }
 .people_area .top_filter_options .people_main .people_item .text {
-  height: 100%;
-  padding: 24px;
+  height: 250px;
+  padding: 24px 40px;
+  display: flex;
+  flex-direction: column;
 }
 .people_area .top_filter_options .people_main .people_item .text .title {
   font-size: 24px;
-  font-weight: 700;
-  color: #292930;
-  margin-bottom: 5px;
+  font-weight: 500;
+  color: #2b6cac;
+  margin-bottom: 10px;
 }
 .people_area .top_filter_options .people_main .people_item .text .subtitle {
   font-size: 15px;
   font-weight: 400;
   color: #292930;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 .people_area .top_filter_options .people_main .people_item .text .common_btn {
   padding: 10px 23px;
@@ -1079,6 +1174,18 @@ nav {
 }
 .people_area .top_filter_options .people_main .people_item .text .common_btn::before {
   background-color: #292930;
+}
+
+.view_profile {
+  font-size: 18px;
+  font-weight: 700;
+  color: #2b6cac;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.view_profile i {
+  margin-left: 10px;
 }
 
 .people_details {
@@ -1183,34 +1290,41 @@ nav {
   padding: 40px 40px;
 }
 
+.contact_top_info_item {
+  display: flex;
+  margin-bottom: 30px;
+}
+.contact_top_info_item .text {
+  padding-left: 24px;
+}
+
 .contact_area .contact_top_info .contact_top_info_item .icon {
-  width: 72px;
-  height: 72px;
-  margin-bottom: 20px;
+  width: 35px;
+  height: 35px;
   border-radius: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #2b6cac;
   color: #ffffff;
-  font-size: 30px;
+  font-size: 16px;
 }
 
 .contact_area .contact_top_info .contact_top_info_item .text .title {
   font-size: 26px;
   font-weight: 500;
   color: #292930;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .contact_area .contact_top_info .contact_top_info_item .text ul li {
-  color: #777777;
+  color: #373a3c;
   font-size: 16px;
   font-weight: 400;
 }
 
 .contact_area .contact_top_info .contact_top_info_item .text ul li a {
-  color: #777777;
+  color: #373a3c;
   font-size: 16px;
   font-weight: 400;
   margin-bottom: 5px;
@@ -1239,12 +1353,10 @@ nav {
   display: none;
 }
 
-.contact_area .contact_map_form {
-  padding-top: 80px;
-}
-
 .contact_area .contact_map_form .maps {
   height: 632px;
+  margin-bottom: -80px;
+  margin-top: 60px;
 }
 
 .contact_area .contact_map_form .maps iframe {
