--- a/sass/common/_common.scss
+++ b/sass/common/_common.scss
@@ -26,6 +26,7 @@ p {
   color: $paragraph;
   margin: 0;
   padding: 0;
+  font-weight: 400;
 }
 
 span {
@@ -141,6 +142,14 @@ button {
       box-shadow: 0px 0px 10px rgba(53, 119, 240, 0.4);
     }
   }
+}
+
+.form-control {
+	border: 1px solid #989898;
+}
+.form-control:focus {
+	border-color: unset;
+  box-shadow: unset;
 }
 
 .mt-30 {
