--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -13,7 +13,7 @@
 
   .text {
     .title {
-      @include font(26px, 600);
+      @include font(26px, 400);
       margin-top: 30px;
     }
 
@@ -51,3 +51,16 @@
     }
   }
 }
+
+.about-bg{
+  background-position: center auto !important;
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
+  height: 300px;
+}
+
+.small-image {
+  float: left;
+  margin-right: 24px;
+  margin-bottom: 20px;
+  }
