--- a/sass/components/_practice-area.scss
+++ b/sass/components/_practice-area.scss
@@ -4,13 +4,16 @@
 
 .practice_area {
   padding-top: 80px;
+  margin-bottom: 80px;
+  
   .bg-static{
     background-color: #333333;
     display: inline-block;
-
+  }
 
     .area-wrapper{
       margin: -20px 0;
+
       .image{
         width: 100%;
         height: 330px;
@@ -29,37 +32,52 @@
           bottom: 0;
           right: 0;
           text-align: center;
-          transition: .4s;
-          background-color: rgba(0, 0, 0, 0.245);
+          background-color: rgba(0, 0, 0, 0.5);
           display: flex;
-          align-items: center;
-          justify-content: center;
+          transition: .5s;
           
           h3{
-            margin: 10px;
-            // margin: auto auto;
+            margin: 6px;
             width: 100%;
-            height: 100%;
             transition: .3s;
             color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border: 4px solid rgba(0, 0, 0, 0);
+            
+            
+            
+            span{
+              width: 251px;
+              font-family: "Roboto", sans-serif;
+              @include font(26px, 400);   
+              position: relative;
+
+              &::before {
+                position: absolute;
+                bottom: -30px;
+                left: 50%;
+                width: 40px;
+                height: 4px;
+                background-color: #2b6cac;
+                content: "";
+                transform: translateX(-50%);
+              }           
+            }
           }
 
-          &:hover h3{
-              
-              border: 5px solid rgb(68, 141, 237);
-              background-color: rgba(0, 0, 0, 0.259);
+          &:hover{
+            background-color: rgba(0, 0, 0, 0.7);
+
+            h3{
+              border: 4px solid #2b6cac
+            }
           }
-          
-          // &:hover{
-          //   top: 10px;
-          //   left: 10px;
-          //   bottom: 10px;
-          //   right: 10px;
-          // }
         }
       }
     }
-  }
+  
 }
 
 .practice_item {
@@ -119,4 +137,8 @@
     }
   }
 
+}
+
+.practice_area_page .area-wrapper .image .overly h3 span::before {
+	content: none !important;
 }
