--- a/sass/components/_projects.scss
+++ b/sass/components/_projects.scss
@@ -20,12 +20,27 @@
   }
 
   .text {
-    padding: 20px 20px;
+    padding: 40px 25px;
+    position: relative;
 
     .title {
-      @include font(20px, 700);
+      font-family: 'Roboto', sans-serif;
+      @include font(16px, 500);
       color: $black;
       transition: $transition;
+      text-align: center;
+    }
+
+    &::after {
+      content: " ";
+      display: block;
+      position: absolute;
+      left: calc(50% - 13px);
+      top: -19px;
+      width: 26px;
+      height: 38px;
+      background-size: 100%;
+      background-image: url(../../images/add.png);
     }
   }
 
