--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -4,5 +4,6 @@
 @import "../components/practice-area";
 @import "../components/projects";
 @import "../components/founder-messages";
+@import "../components/foreign_investment_area";
 @import "../components/footer";
 @import "../components/breadcrumb";
