--- a/sass/variable/_variable.scss
+++ b/sass/variable/_variable.scss
@@ -3,8 +3,9 @@ $white-text: #f1f1f1;
 $black: #292930;
 $primary: #2b6cac;
 $bg:#f2f2f2;
+$bg1:#f6f1e8;
 $secondary:#EFA311;
-$paragraph:#777777;
+$paragraph:#373a3c;
 $border:#ccc;
 $transition:all .3s ease-in-out;
 // $themeColor: #A1CC3A;
