--- a/css/style.css
+++ b/css/style.css
@@ -709,7 +709,7 @@ nav {
   text-align: center;
 }
 .projects_item .text::after {
-  content: " ";
+  content: "";
   display: block;
   position: absolute;
   left: calc(50% - 13px);
@@ -717,7 +717,7 @@ nav {
   width: 26px;
   height: 38px;
   background-size: 100%;
-  background-image: url(../../images/add.png);
+  background-image: url(../images/add.png);
 }
 .projects_item:hover .image img {
   transform: scale(1.1);
