--- a/sass/components/_projects.scss
+++ b/sass/components/_projects.scss
@@ -32,7 +32,7 @@
     }
 
     &::after {
-      content: " ";
+      content: "";
       display: block;
       position: absolute;
       left: calc(50% - 13px);
@@ -40,7 +40,7 @@
       width: 26px;
       height: 38px;
       background-size: 100%;
-      background-image: url(../../images/add.png);
+      background-image: url(../images/add.png);
     }
   }
 
