--- a/sass/components/_practice-area.scss
+++ b/sass/components/_practice-area.scss
@@ -49,7 +49,7 @@
             
             
             span{
-              width: 251px;
+              // width: 250px;
               font-family: "Roboto", sans-serif;
               @include font(26px, 400);   
               position: relative;
