--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,4 +1,5 @@
 @import "../components/header";
+@import "../components/navbar";
 @import "../components/banner";
 @import "../components/about";
 @import "../components/practice-area";
