--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,6 @@ button {
 .common_btn {
   background-color: #2b6cac;
   border-radius: 50px;
-  padding: 15px 30px;
   position: relative;
   transition: all 0.3s ease-in-out;
   color: #ffffff;
@@ -413,6 +412,213 @@ nav {
   height: 100px;
 }
 
+.mobile-topbar {
+  z-index: 99999;
+}
+
+.mobile-topbar .bars {
+  top: 100px;
+  left: 25px;
+}
+
+.mobile-topbar .bars i {
+  height: 40px;
+  color: #000000;
+  font-size: 25px;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.mobile-menu {
+  z-index: 999;
+  background-color: #ffffff;
+  width: 100%;
+  transition: all linear 0.2s;
+}
+
+.mobile-menu .mobile-topbar .icon i {
+  width: 45px;
+  height: 45px;
+  background-color: #ffffff;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 45px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: all linear 0.2s;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+}
+
+.mobile-menu .mobile-topbar .icon i:hover {
+  background-color: #e41b2e;
+  color: #ffffff;
+  border-color: #e41b2e;
+}
+
+.mobile-menu .mobile-menu-overlay {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+}
+
+.mobile-menu .mobile-menu-main {
+  width: 320px;
+  height: 100%;
+  background-color: #ffffff;
+  position: fixed;
+  top: 0;
+  left: -320px;
+  z-index: 9999;
+  overflow-y: scroll;
+  transition-duration: 0.3s;
+}
+
+.mobile-menu .mobile-menu-main .close-m-menu i {
+  width: 40px;
+  height: 40px;
+  background-color: #414246;
+  text-align: center;
+  line-height: 40px;
+  color: #ffffff;
+  font-size: 20px;
+  cursor: pointer;
+  transition: all linear 0.2s;
+}
+
+.mobile-menu .mobile-menu-main .close-m-menu i:hover {
+  background-color: #e41b2e;
+}
+
+.mobile-menu .mobile-menu-main .menu-body {
+  padding: 20px;
+}
+
+.mobile-menu .mobile-menu-main .menu-body .action {
+  padding-top: 20px;
+  padding-bottom: 30px;
+}
+
+.mobile-menu .mobile-menu-main .menu-body .action ul li {
+  width: 50px;
+  height: 50px;
+  background-color: #ffffff;
+  text-align: center;
+  line-height: 50px;
+  border-radius: 50%;
+  box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.1) !important;
+  color: #414246;
+  font-size: 18px;
+  transition: all linear 0.2s;
+  cursor: pointer;
+  position: relative;
+  margin-right: 24px;
+}
+
+.mobile-menu .mobile-menu-main .menu-body .action ul li sup {
+  width: 25px;
+  height: 25px;
+  background-color: #e41b2e;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 25px;
+  display: inline-block;
+  color: #ffffff;
+  position: absolute;
+  top: -4px;
+  font-size: 12px;
+  font-weight: 600;
+}
+
+.mobile-menu .mobile-menu-main .menu-body .action ul li a {
+  color: #414246;
+}
+
+.mobile-menu .mobile-menu-main .menu-body .search input {
+  width: 100%;
+  height: 45px;
+  background-color: transparent;
+  border: 1px solid #cccccc;
+  border-radius: 3px;
+  padding: 0 50px 0 20px;
+  transition: all linear 0.2s;
+}
+
+.mobile-menu .mobile-menu-main .menu-body .search input:focus {
+  border-color: #e41b2e;
+}
+
+.mobile-menu .mobile-menu-main .menu-body .search button {
+  top: 50%;
+  right: 20px;
+  transform: translateY(-50%);
+  background-color: transparent;
+  border: 0;
+  font-size: 18px;
+}
+
+.mobile-menu .mobile-menu-main .menu-body .menu-list {
+  padding-top: 10px;
+}
+
+.mobile-menu .mobile-menu-main .menu-body .menu-list ul li a {
+  font-size: 15px;
+  font-weight: 400;
+  color: #232F3E;
+  border-top: 1px solid #f2f2f2;
+  width: 100%;
+  line-height: 40px;
+  transition: all linear 0.2s;
+}
+
+.mobile-menu .mobile-menu-main .menu-body .menu-list ul li a:hover {
+  color: #e41b2e;
+}
+
+.mobile-menu .mobile-menu-main .menu-body .menu-list ul li a i {
+  width: 40px;
+  height: 40px;
+  background-color: #ffffff;
+  text-align: center;
+  line-height: 40px;
+  transition: all linear 0.2s;
+}
+
+.mobile-menu .mobile-menu-main .menu-body .menu-list ul li a:hover i {
+  background-color: #e41b2e;
+  color: #ffffff;
+}
+
+.mobile-menu .mobile-menu-main .menu-body .menu-list ul li ul {
+  padding-left: 20px;
+  display: none;
+}
+
+.mobile-menu-overlay {
+  transition-duration: 0.3s;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.show-mobile-menu-overlay {
+  visibility: visible;
+  opacity: 1;
+}
+
+.show-mobile-menu {
+  left: 0 !important;
+}
+
+.mobile-sticky-top {
+  padding: 10px 0 !important;
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
+}
+
 .slideshow {
   position: relative;
   z-index: 1;
@@ -422,15 +628,16 @@ nav {
   transition: all 1s cubic-bezier(0.7, 0, 0.3, 1);
 }
 .slideshow .item {
-  height: 100%;
+  width: 100%;
   position: relative;
   z-index: 1;
 }
 .slideshow .item img {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
   transition: all 8s cubic-bezier(0.7, 0, 0.3, 1);
   transform: scale(1);
-  height: 650px;
 }
 .slideshow .item.slick-active img {
   transform: scale(1.5);
@@ -441,7 +648,6 @@ nav {
   left: 0;
   width: 100%;
   height: 100%;
-  padding-bottom: 140px;
   padding-top: 200px;
 }
 
@@ -608,7 +814,6 @@ nav {
   border: 4px solid rgba(0, 0, 0, 0);
 }
 .practice_area .area-wrapper .image .overly h3 span {
-  width: 251px;
   font-family: "Roboto", sans-serif;
   font-size: 26px;
   font-weight: 400;
@@ -779,7 +984,6 @@ nav {
 
 .footer_area .footer-bg {
   background-color: #292930;
-  padding: 90px 0 30px 0;
   margin-top: 80px;
 }
 
@@ -817,9 +1021,7 @@ nav {
 
 .footer_area .footer-bg .footer-widget .footer-title {
   color: #ffffff;
-  font-size: 26px;
   font-weight: 700;
-  margin-bottom: 30px;
 }
 
 .footer_area .footer-bg .footer-widget .services li {
@@ -1001,6 +1203,12 @@ nav {
 
 .people_area {
   padding-top: 80px;
+  margin-top: 80px;
+}
+.people_area .entry-title {
+  margin-bottom: 40px;
+  text-transform: uppercase;
+  text-align: center;
 }
 .people_area .top_filter_options .search {
   margin-bottom: 32px;
@@ -1142,20 +1350,28 @@ nav {
   margin-left: 5px;
 }
 .people_area .top_filter_options .people_main .people_item {
-  background-color: #f2f2f2;
+  background-color: #ffffff;
   transition: all 0.3s ease-in-out;
+  box-shadow: 0px 2px 3px 0px #dbdbdb;
+}
+.people_area .top_filter_options .people_main .people_item .image {
+  height: 240px;
+}
+.people_area .top_filter_options .people_main .people_item .image img {
+  height: 100%;
+  object-fit: cover;
 }
 .people_area .top_filter_options .people_main .people_item:hover {
   transform: scale(1.02);
 }
 .people_area .top_filter_options .people_main .people_item .text {
-  height: 250px;
-  padding: 24px 40px;
+  height: 240px;
+  padding: 35px 30px;
   display: flex;
   flex-direction: column;
 }
 .people_area .top_filter_options .people_main .people_item .text .title {
-  font-size: 24px;
+  font-size: 26px;
   font-weight: 500;
   color: #2b6cac;
   margin-bottom: 10px;
@@ -1186,6 +1402,10 @@ nav {
 }
 .view_profile i {
   margin-left: 10px;
+}
+
+.bg {
+  background-color: #f2f2f2;
 }
 
 .people_details {
