--- a/sass/components/_banner.scss
+++ b/sass/components/_banner.scss
@@ -12,15 +12,16 @@
   }
 
   .item {
-    height: 100%;
+    width: 100%;
     position: relative;
     z-index: 1;
 
     img {
       width: 100%;
+      height: 100%;
+      object-fit: cover;
       transition: all 8s cubic-bezier(0.7, 0, 0.3, 1);
       transform: scale(1);
-      height: 650px;
     }
 
     &.slick-active img {
@@ -33,7 +34,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      padding-bottom: 140px;
+      // padding-bottom: 140px;
       padding-top: 200px;
     }
   }
