--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -3,7 +3,7 @@
 
 .footer_area .footer-bg {
   background-color: $black;
-  padding: 90px 0 30px 0;
+  // padding: 90px 0 30px 0;
   margin-top: 80px;
 }
 
@@ -41,9 +41,7 @@
 
 .footer_area .footer-bg .footer-widget .footer-title {
   color: $white;
-  font-size: 26px;
   font-weight: 700;
-  margin-bottom: 30px;
 }
 
 .footer_area .footer-bg .footer-widget .services li {
