--- a/sass/pages/_people.scss
+++ b/sass/pages/_people.scss
@@ -4,6 +4,13 @@
 
 .people_area {
   padding-top: 80px;
+  margin-top: 80px;
+
+  .entry-title {
+    margin-bottom: 40px;
+    text-transform: uppercase;
+    text-align: center;
+  }
 
   .top_filter_options {
     .search {
@@ -177,21 +184,31 @@
       }
 
       .people_item {
-        background-color: $bg;
+        background-color: $white;
         transition: $transition;
+        box-shadow: 0px 2px 3px 0px #dbdbdb;
+
+        .image{
+          height: 240px;
+
+          img{
+            height: 100%;
+            object-fit: cover;
+          }
+        }
 
         &:hover {
           transform: scale(1.02);
         }
 
         .text {
-          height: 250px;
-          padding: 24px 40px;
+          height: 240px;
+          padding: 35px 30px;
           display: flex;
           flex-direction: column;
 
           .title {
-            @include font(24px, 500);
+            @include font(26px, 500);
             color: $primary;
             margin-bottom: 10px;
           }
@@ -226,4 +243,8 @@
   i{
     margin-left: 10px;
   }
+}
+
+.bg{
+  background-color: $bg;
 }
