--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -1,4 +1,152 @@
+@media (max-width: 575px) { 
+
+    // people details page
+    .people_details .image .img {
+        max-width: 180px;
+        padding: 7px;
+    }
+    .people_details .image .info .info_item .main_title {
+        font-size: 24px;
+        padding-bottom: 10px;
+    }
+
+    // practice area page
+    .practice_area_page .area-wrapper .image {
+        height: 250px;
+    }
+    .project_details_area {
+        padding-top: 60px;
+    }
+
+    // people page
+    .people_area .top_filter_options .people_main .people_item .text {
+        height: 230px;
+        padding: 25px;
+    }
+    .people_area .top_filter_options .people_main .people_item .image {
+        height: 350px;
+    }
+
+    // contact page
+    .contact_area {
+        padding: 0;
+    }
+    .contact_area .contact_top_info {
+        border: unset;
+        border-radius: 10px;
+        padding: 40px 24px;
+    }
+
+    // about page
+    .about_area {
+        padding-top: 50px;
+    }
+
+    // home page
+    .common_btn{
+        padding: 8px 20px;
+    }
+    .banner_area .item{
+        height: 512px;
+    }
+    .slideshow .item .item_text {
+        padding-top: 70px;
+    }
+    .banner_area .icon {
+        width: 40px;
+        height: 40px;
+        top: 90%;
+    }
+    .practice_area {
+        padding-top: 50px;
+        margin-bottom: 60px;
+    }
+    .practice_area .area-wrapper .image .overly h3 span {
+        width: 60%;
+    }
+    .foreign_investment_area {
+        padding: 50px 0;
+    }
+    .projects_area {
+        padding-top: 60px;
+    }
+    .founder_messages_area {
+        margin-top: 60px;
+        padding: 50px 0;
+    }
+    .founder_messages_area .image {
+        padding: 7px;
+    }
+
+    .footer_area .footer-bg .footer-widget .footer-title {
+        margin-bottom: 16px;
+    }
+    .footer_area .footer-bg .footer-widget .footer-title {
+        font-size: 22px;
+    }
+    .footer_area .footer-bg {
+        padding: 40px 0 30px 0;
+    }
+    .footer_area .footer-bg .copyright {
+        margin-top: 20px;
+    }
+    .footer_area .footer-bg {
+        margin-top: 60px;
+    }
+
+    // founder msg page
+    .area_2 .founder_main .image {
+        width: 220px;
+    }
+    .area_2 {
+        margin-top: 0px;
+    }
+    
+}
+
+
 @media (min-width: 576px) { 
+
+    // people details page
+    .people_details .image .img {
+        max-width: 180px;
+        padding: 7px;
+    }
+    .people_details .image .info .info_item .main_title {
+        font-size: 24px;
+        padding-bottom: 10px;
+    }
+
+    // practice area page
+    .practice_area_page .area-wrapper .image {
+        height: 250px;
+    }
+
+    // people page
+    .people_area .top_filter_options .people_main .people_item .text {
+        height: 230px;
+        padding: 25px;
+    }
+    .people_details {
+        padding-top: 60px;
+    }
+
+    // project detail page
+    .project_details_area {
+        padding-top: 60px;
+    }
+    
+    // founder msg page
+    .area_2 .founder_main .image {
+        width: 220px;
+    }
+
+    // about page
+    .about_area {
+        padding-top: 60px;
+    }
+
+    // home page
     .common_btn{
         padding: 8px 20px;
     }
@@ -28,10 +176,30 @@
     .footer_area .footer-bg {
         padding: 60px 0 30px 0;
     }
+    .footer_area .footer-bg {
+        margin-top: 60px;
+    }
+
+    
 }
 
 
 @media (min-width: 768px) { 
+    // people details page
+    .people_details .image .info .info_item .main_title {
+        font-size: 28px;
+    }
+
+    // contact us page
+    .contact_area .contact_map_form .forms {
+        max-width: 100%;
+    }
+    // practice area page
+    .practice_area_page .area-wrapper .image {
+        height: 260px;
+    }
+
+    // home page
     .practice_area .area-wrapper .image .overly h3 span {
         width: 47%;
     }
@@ -39,6 +207,27 @@
 
 
 @media (min-width: 992px) { 
+
+    // people details page
+     .people_details .image .img {
+        max-width: 100%;
+        padding: 10px;
+    }
+    .people_details .image .info {
+        border: 1px solid #ccc;
+        padding: 24px;
+    }
+    .people_details .image .info .info_item .main_title {
+        font-size: 32px;
+        padding-bottom: 12px;
+    }
+
+    // founder msg page
+    .area_2 .founder_main .image {
+        width: 250px;
+    }
+
+    // home page
     .common_btn{
         padding: 10px 30px;
     }
@@ -61,6 +250,12 @@
 
 
 @media (min-width: 1200px) { 
+    // founder msg page
+    .area_2 .founder_main .image {
+        width: 280px;
+    }
+
+    // home page
     .navbar-brand img{
         width: 115px;
     }
