--- a/sass/components/_foreign_investment_area.scss
+++ b/sass/components/_foreign_investment_area.scss
@@ -5,7 +5,7 @@
 .foreign_investment_area {
   // margin-top: 80px;
   padding: 60px 0;
-  background-color: $bg;
+  background-color: $bg1;
   background-size: cover !important;
 
   .image{
