--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -161,6 +161,7 @@ nav {
 
 .navbar-nav .nav-item .nav-link.active {
   color: $secondary !important;
+  // border-bottom: 2px solid $secondary;
 }
 
 .navbar-nav .nav-item .nav-link.active::before {
