--- a/sass/components/_practice-area.scss
+++ b/sass/components/_practice-area.scss
@@ -44,15 +44,19 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            padding: 10px;
             border: 4px solid rgba(0, 0, 0, 0);
             
             
             
-            span{
+            p{
               // width: 250px;
               font-family: "Roboto", sans-serif;
               @include font(26px, 400);   
               position: relative;
+              color: $white;
+              word-wrap: break-word;
+              word-break: break-word;
 
               &::before {
                 position: absolute;
